fix: hero section alignment

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ h6 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   gap: 40px;
 }
 
